--- a/code/01-HelloWorld/01-HelloWorld.csproj
+++ b/code/01-HelloWorld/01-HelloWorld.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HelloActor.cs" />
     <Compile Include="HelloWorldActor.cs" />
     <Compile Include="HelloWorldMessage.cs" />
     <Compile Include="Program.cs" />
