Supervising strategy example (commented out, uncomment for the demo)

--- a/code/01-HelloWorld/01-HelloWorld.csproj
+++ b/code/01-HelloWorld/01-HelloWorld.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelloActor.cs" />
+    <Compile Include="HelloGuardianActor.cs" />
     <Compile Include="HelloWorldActor.cs" />
     <Compile Include="HelloWorldMessage.cs" />
     <Compile Include="Program.cs" />
