--- a/code/CSharp/03-ActorsRemoteClient/app.config
+++ b/code/CSharp/03-ActorsRemoteClient/app.config
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="akka"
-                 type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
+        <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka" />
     </configSections>
 
     <startup>
@@ -33,4 +32,16 @@
         </hocon>
     </akka>
 
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.ProtocolBuffers" publicKeyToken="55f7125234beb589" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.1.555" newVersion="2.4.1.555" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
