--- a/code/FSharp/03-ActorsRemoteServer/packages.config
+++ b/code/FSharp/03-ActorsRemoteServer/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="Akka" version="1.0.5" targetFramework="net452" />
   <package id="Akka.FSharp" version="1.0.5" targetFramework="net452" />
+  <package id="Akka.Remote" version="1.0.5" targetFramework="net452" />
   <package id="FsPickler" version="1.7.1" targetFramework="net452" />
   <package id="FSPowerPack.Core.Community" version="3.0.0.0" targetFramework="net452" />
   <package id="FSPowerPack.Linq.Community" version="3.0.0.0" targetFramework="net452" />
+  <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
+  <package id="Helios" version="1.4.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
 </packages>
