Renaming files to better tell one from another in VS

--- a/code/FSharp/02-AsyncConsole/02-AsyncConsole.fsproj
+++ b/code/FSharp/02-AsyncConsole/02-AsyncConsole.fsproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="AsyncConsole.fs" />
     <None Include="App.config" />
   </ItemGroup>
   <PropertyGroup>
