--- a/code/FSharp/01-HelloWorld/01-HelloWorld.fsproj
+++ b/code/FSharp/01-HelloWorld/01-HelloWorld.fsproj
@@ -20,7 +20,7 @@
     <Optimize>false</Optimize>
     <Tailcalls>false</Tailcalls>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;_BEHAVIOR;_SUPERVISION</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;BEHAVIOR;SUPERVISION</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\Debug\_01_HelloWorld.XML</DocumentationFile>
@@ -54,7 +54,7 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="HelloWorld.fs" />
     <Content Include="packages.config" />
     <Content Include="App.config" />
   </ItemGroup>
