--- a/code/FSharp/02-ActorsConsole/02-ActorsConsole.fsproj
+++ b/code/FSharp/02-ActorsConsole/02-ActorsConsole.fsproj
@@ -54,7 +54,7 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="ActorsConsole.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
   </ItemGroup>
